# ai-app-handson

./: .gitignore  GEMINI.md  README.md  pyproject.toml  teachme-agents.md  teachme.md
.devcontainer/: .env.example  Dockerfile  compose.yaml  devcontainer.json  pyproject.toml
.gemini/: settings.json
.gemini/commands/: build.toml  fix.toml
.gemini/skills/design/: SKILL.md
.gemini/skills/evaluation/: SKILL.md
.gemini/skills/exploration/: SKILL.md
.gemini/skills/implement/: SKILL.md
.gemini/skills/plan-procedures/: SKILL.md
.gemini/skills/tests/: SKILL.md
.rulesync/: hooks.json  mcp.json  rulesync.sh
.rulesync/commands/: build.md  fix.md
.rulesync/rules/: overview.md
.rulesync/skills/design/: SKILL.md
.rulesync/skills/evaluation/: SKILL.md
.rulesync/skills/exploration/: SKILL.md
.rulesync/skills/implement/: SKILL.md
.rulesync/skills/plan-procedures/: SKILL.md
.rulesync/skills/tests/: SKILL.md
app/: agent.py  requirements.txt
app/tools/: __init__.py  apis.py  arithmetic_operations.py
tests/: conftest.py  test_agent_eval.py  test_apis.py  test_arithmetic_operations.py
tests/eval/: arithmetic_eval.test.json
